@@ -14,6 +14,7 @@ TODO:
 
     - Threading
         - Quid IAT hook stub ? just einit threads and remove this ?
+        - Continue test with new generate_callback_stub and remove commented code if it works
 
     - Injection
         - code generated by generate_python_exec_shellcode_64[32] may be reused
